--- a/app/less/header.less
+++ b/app/less/header.less
@@ -39,8 +39,11 @@
   }
 
   .nav {
+    width: 100%;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
     font-family: @main-font;
     font-size: 14px;
     font-weight: 600;
@@ -52,7 +55,7 @@
     }
 
     &__item:not(:last-child) {
-      margin-right: 26px;
+      margin-right: 18px;
     }
 
     &__link {
