responsive design have been added

--- a/app/less/footer.less
+++ b/app/less/footer.less
@@ -1,5 +1,5 @@
 .footer {
-  max-width: 1170px;
+  max-width: 1200px;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -9,6 +9,13 @@
   line-height: 20px;
   margin-top: 51px;
   margin-bottom: 45px;
+  padding: 0 28px;
+
+  @media @tablet-l,
+  @tablet-s,
+  @mobile {
+    padding: 0 40px;
+  }
 
   .copyright {
     max-width: 316px;
