--- a/app/less/main.less
+++ b/app/less/main.less
@@ -233,6 +233,10 @@
         font-size: 32px;
         line-height: 29px;
       }
+
+      @media @mobile {
+        text-align: center;
+      }
     }
 
     &-list {
