--- a/app/less/footer.less
+++ b/app/less/footer.less
@@ -17,8 +17,18 @@
     padding: 0 40px;
   }
 
+  @media @mobile {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .copyright {
     max-width: 316px;
+
+    @media @mobile {
+      text-align: center;
+      order: 2;
+    }
   }
 
   .social {
@@ -26,6 +36,11 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media @mobile {
+      order: 1;
+      margin-bottom: 30px;
+    }
 
     &__item {
       width: 100%;
