nav fix#1 and adding new page called about

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -33,6 +33,7 @@ body {
 @import 'header.less';
 // @import 'menu.less';
 // @import 'callback.less';
+@import 'department.less';
 @import 'main.less';
 // @import 'services.less';
 // @import 'benefits.less';
