footer in the bottom of page

--- a/app/less/footer.less
+++ b/app/less/footer.less
@@ -3,6 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  flex: 0 0 auto;
   color: @rights-in-footer-color;
   font-family: @main-font;
   font-size: 12px;
