--- a/app/pug/layout/header-about.pug
+++ b/app/pug/layout/header-about.pug
@@ -1,6 +1,7 @@
-header.header
+header.header.header-about
   .wrapper
     .header__wrapper
       include header-logos
       include nav
       include lang
+    h1.header-about__title О кафедре
