--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,6 +1,10 @@
+main {
+  display: flex;
+  flex: 1 0 auto;
+}
+
 .main {
   width: 100%;
-  display: flex;
   flex-direction: column;
   align-items: center;
 
