--- a/app/pug/pages/about.pug
+++ b/app/pug/pages/about.pug
@@ -10,6 +10,6 @@ html(lang="ru-RU")
     link(rel='stylesheet' href='https://fonts.googleapis.com/css?family=Playfair+Display:700&display=swap&subset=cyrillic')
   body
     include ../layout/header-about
-    //- include ../layout/main-about
+    include ../layout/main-about
     include ../layout/footer
     script(type='text/javascript' src='js/index.js')
