--- a/app/pug/layout/nav.pug
+++ b/app/pug/layout/nav.pug
@@ -1,4 +1,12 @@
-- var navList = [{title: 'Главная', link: '/'}, {title: 'О кафедре', link: 'about.html'}, {title: 'Направления деятельности', link: '#'}, {title: 'Партнеры', link: 'partners.html'}, {title: 'Руководство', link: 'employees.html'}, {title: 'Контакты', link: '#'}];
+- 
+  var navList = [
+    {title: 'Главная', link: '/'}, 
+    {title: 'О кафедре', link: 'about.html'}, 
+    {title: 'Направления деятельности', link: '#'}, 
+    {title: 'Партнеры', link: 'partners.html'}, 
+    {title: 'Руководство', link: 'employees.html'}, 
+    {title: 'Контакты', link: '#'}
+  ]
 
 ul.nav
   each item in navList
