--- a/app/pug/layout/main-about.pug
+++ b/app/pug/layout/main-about.pug
@@ -7,11 +7,11 @@
 
 main.main-about
   section.main-about__description
-    section.main-about__left
-      h4 Государственные Университет Управления
-      h2 Кафедра
+    article.university
+      h4.university__name Государственные Университет Управления
+      h2.university__dep Кафедра
         span.upper Юнеско
-        | 
+      p.university__description "Социально-правовые и этические основы общества знаний (информационного общества)"
       .activity
         .activity-block
           h3.activity-block__title Деятельность
@@ -19,20 +19,23 @@ main.main-about
         .activity-block
           h3.activity-block__title Цифровое волонтрство
           p.activity-block__description Lorem ipsum dolor sit amet consectetur adipisicing elit. Et accusamus ipsum quod repudiandae. Ullam reiciendis eveniet quaerat minus doloremque! Sequi repudiandae temporibus rem deserunt quos voluptatem molestiae explicabo dolor consequatur iure? Repudiandae eligendi velit corrupti eius dolore qui dicta labore accusantium vitae nihil? Earum maiores quisquam assumenda alias, cum molestiae iste asperiores! Fuga vitae corporis placeat cum, doloribus praesentium laborum!
-    section.main-about__right
-      .formation
-        h3.formation__title
-        p.formation__description
+    section.history
+      article.formation
+        h3.formation__title Создание кафедры
+        p.formation__description Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci excepturi voluptatum ex iste dicta quia nobis fugiat, deleniti dolores non autem vitae! Quae, officia autem praesentium necessitatibus commodi laborum harum assumenda corporis hic libero rerum quaerat voluptate magni, esse inventore, eius porro. Dolores, aperiam error ratione ipsam quos exercitationem illo qui. Inventore deleniti, amet nulla tenetur a expedita perspiciatis beatae.
           ul.formation-goals
             each val in goalsList
               li.goal
                 h4(class='goal__title')= val.title
                 p(class='goal__description')= val.description
-      .partner-universities
+      article.partner-universities
         h3.partner-universities__title Вузы-партнеры
         p.partner-universities__description Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis sint accusamus magni, numquam culpa adipisci placeat dicta et aliquid deserunt illum dolores veritatis eveniet laudantium illo nisi aspernatur necessitatibus blanditiis fuga recusandae doloribus. Quam totam adipisci natus nobis ad hic alias omnis vitae illum vero sint pariatur consectetur culpa dolores minima aliquam nihil possimus commodi, ab aspernatur cumque esse inventore.
+        br
+        p.partner-universities__description Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus ex unde deleniti aperiam mollitia quidem dolorum sapiente eveniet animi rem rerum suscipit consequuntur repellat, dolorem autem molestiae magnam sit.
   section.docs
-    h3.docs__title Уставные документы
-    a(class='docs__download' href='#' download='#') Скачать pdf
+    .docs-block
+      h3.docs-block__title Уставные документы
+      a(class='docs-block__download' href='#' download='#') Скачать pdf
     // ul.docs-list
       
