--- a/app/less/main-about.less
+++ b/app/less/main-about.less
@@ -8,16 +8,50 @@
     display: flex;
     margin-bottom: 100px;
 
+    @media @desktop-s,
+    @tablet-l {
+      padding: 0 40px;
+    }
+
+    @media @tablet-s,
+    @mobile {
+      flex-wrap: wrap;
+    }
+
     .university {
       color: @third-font-color;
       padding-top: 50px;
+      margin-right: 30px;
+
+      @media @tablet-s,
+      @mobile {
+        padding-top: 0;
+        margin-right: 0;
+      }
   
       &__name {
         margin-bottom: 50px;
+
+        @media @tablet-s,
+        @mobile {
+          padding: 0 40px;
+        }
+      }
+
+      &__dep {
+        @media @tablet-s,
+        @mobile {
+          padding: 0 40px;
+        }
       }
       
       &__description {
         margin-bottom: 80px;
+
+        @media @tablet-s,
+        @mobile {
+          padding: 0 40px;
+        }
       }
   
       .activity {
@@ -26,11 +60,14 @@
           linear-gradient(to right, #000335, #042571);
         background-size: cover;
         background-repeat: no-repeat;
-        margin-right: 30px;
+        padding: 50px;
   
         &-block {
-          padding: 50px;
-  
+
+          &:last-child {
+            padding-top: 30px;
+          }
+          
           &__title {
             color: @second-font-color;
             margin-bottom: 30px;
@@ -85,6 +122,13 @@
 
   .docs {
     display: flex;
+
+    @media @desktop-s,
+    @tablet-l,
+    @tablet-s,
+    @mobile {
+      padding: 0 40px;
+    }
 
     &-block {
       width: 100%;
