--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -1,15 +1,14 @@
 /* colors */
 
-@first-bg-color: #78c8f9;
-// @second-bg-color: #24309A;
-// @third-bg-color: #2C96CB;
+@first-bg-color: #78C8F9;
 @main-font-color: #6A6C7A;
 @second-font-color: #FFFFFF;
 @third-font-color: #040B44;
 @fourth-color: #41B8FF;
-@fifth-color: #7692d7;
+@fifth-color: #7692D7;
 @rights-in-footer-color: #9698AC;
-@border-color: #3d84ff;
+@border-color: #3D84FF;
+@image-bg-color: #e7e9ef;
 
 /* fonts */
 
