--- a/app/pug/layout/nav.pug
+++ b/app/pug/layout/nav.pug
@@ -4,7 +4,7 @@
     {title: 'О кафедре', link: 'about.html'}, 
     {title: 'Направления деятельности', link: '#'}, 
     {title: 'Партнеры', link: 'partners.html'}, 
-    {title: 'Руководство', link: 'employees.html'}, 
+    {title: 'Руководство', link: 'headship.html'}, 
     {title: 'Контакты', link: '#'}
   ]
 
