headship-page fix#1

--- a/app/less/header-headship.less
+++ b/app/less/header-headship.less
@@ -1,4 +1,9 @@
 .header-headship {
+  background-image:
+    url(../img/geometry2-min.png),
+    linear-gradient(to right, #000335, #042571);
+  background-size: cover;
+
   .wrapper {
     background-image: none;
   }
