about-page done

--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -6,9 +6,10 @@
 @third-font-color: #040B44;
 @fourth-color: #41B8FF;
 @fifth-color: #7692D7;
+@sixth-color: #A9B1C4;
 @rights-in-footer-color: #9698AC;
 @border-color: #3D84FF;
-@image-bg-color: #e7e9ef;
+@image-bg-color: #E7E9EF;
 
 /* fonts */
 
