--- a/app/less/header-about.less
+++ b/app/less/header-about.less
@@ -1,4 +1,9 @@
 .header-about {
+  background-image:
+    url(../img/geometry2-min.png),
+    linear-gradient(to right, #000335, #042571);
+  background-size: cover;
+
   .wrapper {
     background-image: none;
   }
@@ -10,8 +15,8 @@
     line-height: 64px;
     letter-spacing: normal;
     text-align: center;
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin-top: 66px;
+    margin-bottom: 127px;
 
     @media @tablet-l,
     @tablet-s {
