--- a/app/less/main-about.less
+++ b/app/less/main-about.less
@@ -9,27 +9,46 @@
     margin-bottom: 100px;
 
     @media @desktop-s,
-    @tablet-l {
+    @tablet-l,
+    @tablet-s {
       padding: 0 40px;
     }
 
-    @media @tablet-s,
+    @media @tablet-l,
+    @tablet-s,
     @mobile {
       flex-wrap: wrap;
     }
 
+    @media @tablet-l,
+    @tablet-s,
+    @mobile {
+      margin-bottom: 0;
+    }
+
+    @media (max-width: 485px) {
+      padding: 0;
+    }
+
     .university {
+      width: 50%;
       color: @third-font-color;
       padding-top: 50px;
       margin-right: 30px;
 
-      @media @tablet-s,
+      @media @tablet-l,
+      @tablet-s,
       @mobile {
+        width: 100%;
         padding-top: 0;
         margin-right: 0;
       }
   
       &__name {
+        color: @sixth-color;
+        font-size: 18px;
+        font-weight: 600;
+        line-height: 36px;
         margin-bottom: 50px;
 
         @media @tablet-s,
@@ -39,30 +58,59 @@
       }
 
       &__dep {
+        color: @third-font-color;
+        font-family: @second-font;
+        font-size: 42px;
+        line-height: 56px;
+        font-weight: bold;
+
         @media @tablet-s,
         @mobile {
           padding: 0 40px;
         }
+
+        &_upper {
+          text-transform: uppercase;
+        }
       }
       
       &__description {
+        color: @third-font-color;
+        font-family: @second-font;
+        font-size: 34px;
+        line-height: 44px;
+        font-weight: bold;
         margin-bottom: 80px;
 
         @media @tablet-s,
         @mobile {
           padding: 0 40px;
         }
+
+        @media (max-width: 405px) {
+          font-size: 28px;
+        }
+
+        @media (max-width: 345px) {
+          font-size: 24px;
+        }
       }
   
       .activity {
         background-image:
-          url(../img/geometry-min.png),
+          url(../img/bg3-min.png),
           linear-gradient(to right, #000335, #042571);
         background-size: cover;
         background-repeat: no-repeat;
-        padding: 50px;
+        padding: 71px 73px 73px 71px;
+
+        @media (max-width: 394px) {
+          padding: 40px;
+        }
   
         &-block {
+          font-family: @main-font;
+          font-weight: 600;
 
           &:last-child {
             padding-top: 30px;
@@ -70,28 +118,63 @@
           
           &__title {
             color: @second-font-color;
+            font-size: 34px;
+            line-height: 42px;
             margin-bottom: 30px;
+
+            @media (max-width: 345px) {
+              font-size: 28px;
+            }
           }
   
           &__description {
             color: @fifth-color;
+            font-size: 15px;
+            line-height: 25px;
+
+            &_white {
+              color: @second-font-color;
+              font-weight: 600;
+            }
           }
         }
       }
     }
 
     .history {
-    
+      width: 50%;
+      font-family: @main-font;
+
+      @media @tablet-l,
+      @tablet-s,
+      @mobile {
+        width: 100%;
+      }
 
       .formation {
-        box-shadow: 0 0 15px 1px lightgrey;
-        padding: 50px;
+        box-shadow: -2.3px 7.7px 24px 0 rgba(32, 38, 42, 0.1);
+        padding: 70px 71px 72px 69px;
+
+        @media (max-width: 394px) {
+          padding: 40px;
+        }
   
         &__title {
+          color: @third-font-color;
+          font-size: 34px;
+          font-weight: 600;
+          line-height: 56px;
           margin-bottom: 30px;
+
+          @media (max-width: 345px) {
+            font-size: 28px;
+          }
         }
   
         &__description {
+          color: @main-font-color;
+          font-size: 15px;
+          line-height: 25px;
           margin-bottom: 30px;
         }
   
@@ -100,21 +183,52 @@
           .goal {
   
             &__title {
-  
+              color: @third-font-color;
+              font-size: 14px;
+              font-weight: 600;
+              line-height: 24px;
+              letter-spacing: 2.1px;
+              text-transform: uppercase;
             }
   
             &__description {
-            
+              color: @main-font-color;
+              font-size: 15px;
+              line-height: 25px;
             }
           }
         }
       }
   
       .partner-universities {
+        font-family: @main-font;
         padding: 50px;
+
+        @media (max-width: 394px) {
+          padding: 40px;
+        }
   
         &__title {
+          color: @third-font-color;
+          font-size: 34px;
+          font-weight: 600;
+          line-height: 56px;
           margin-bottom: 30px;
+
+          @media (max-width: 345px) {
+            font-size: 28px;
+          }
+        }
+
+        &__description {
+          color: @main-font-color;
+          font-size: 15px;
+          line-height: 25px;
+
+          &_strong {
+            color: @third-font-color;
+            font-weight: 600;
+          }
         }
       }
     }
@@ -122,6 +236,8 @@
 
   .docs {
     display: flex;
+    flex-direction: column;
+    margin-bottom: 40px;
 
     @media @desktop-s,
     @tablet-l,
@@ -134,6 +250,134 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
+      align-items: center;
+      font-family: @main-font;
+      margin-bottom: 38px;
+
+      @media (max-width: 630px) {
+        flex-direction: column;
+      }
+
+      &__title {
+        color: @third-font-color;
+        font-size: 34px;
+        font-weight: 600;
+        line-height: 56px;
+
+        @media (max-width: 630px) {
+          text-align: center;
+        }
+
+        @media (max-width: 345px) {
+          font-size: 28px;
+        }
+      }
+
+      &__download {
+        position: relative;
+        color: @fourth-color;
+        font-size: 14px;
+        font-weight: 600;
+        line-height: 24px;
+        letter-spacing: 1.4px;
+        text-transform: uppercase;
+
+        &::before {
+          position: absolute;
+          content: '';
+          width: 22px;
+          height: 19px;
+          top: 5px;
+          left: -34px;
+          background-image: url(../img/download-min.png);
+        }
+      }
+    }
+
+    &-list {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+
+      @media @desktop-s,
+      @tablet-l,
+      @tablet-s,
+      @mobile {
+        padding: 0 40px;
+      }
+
+      @media (max-width: 855px) {
+        max-width: 539px;
+        align-self: center;
+      }
+
+      @media (max-width: 618px) {
+        max-width: 222px;
+      }
+
+      .doc {
+        cursor: pointer;
+
+        &:not(:last-child) {
+          margin-right: 15px;
+
+          @media (max-width: 618px) {
+            margin-right: 0;
+          }
+        }
+
+        &:nth-child(2) {
+
+          @media (max-width: 855px) {
+            margin-right: 0;
+          }
+
+          @media (max-width: 618px) {
+            margin-top: 15px;
+          }
+        }
+
+        &:nth-child(3) {
+          
+          @media (max-width: 1092px) {
+            margin-right: 0;
+          }
+
+          @media (max-width: 855px) {
+            margin-top: 15px;
+            margin-right: 15px;
+          }
+
+          @media (max-width: 618px) {
+            margin-right: 0;
+          }
+        }
+
+        &:nth-child(4) {
+
+          @media @desktop-s {
+            margin-right: 0;
+          }
+
+          @media (max-width: 1092px) {
+            margin-top: 15px;
+            margin-right: 15px;
+          }
+
+          @media (max-width: 855px) {
+            margin-right: 0;
+          }
+        }
+
+        &:last-child {
+          @media @desktop-s,
+          @tablet-l,
+          @tablet-s,
+          @mobile {
+            margin-top: 15px;
+          }
+        }
+      }
     }
   }
 }
