about-page fix#1

--- a/app/less/header.less
+++ b/app/less/header.less
@@ -199,6 +199,7 @@
     font-size: 14px;
     font-weight: 600;
     line-height: 20px;
+    text-transform: uppercase;
 
     @media @tablet-s,
     @mobile {
