--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -7,6 +7,7 @@
 @fourth-color: #41B8FF;
 @fifth-color: #7692D7;
 @sixth-color: #A9B1C4;
+@goal-color: #4BB7FA;
 @rights-in-footer-color: #9698AC;
 @border-color: #3D84FF;
 @image-bg-color: #E7E9EF;
