--- a/app/pug/layout/main-about.pug
+++ b/app/pug/layout/main-about.pug
@@ -27,7 +27,7 @@ main.main-about
       h4.university__name Государственные университет управления
       h2.university__dep Кафедра
         span.university__dep_upper  Юнеско
-      p.university__description "Социально-правовые и этические основы общества знаний (информационного общества)"
+      p.university__description &laquo;Социально-правовые и этические основы общества знаний (информационного общества)&raquo;
       article.activity
         .activity-block
           h3.activity-block__title Деятельность
