--- a/app/less/main-about.less
+++ b/app/less/main-about.less
@@ -33,7 +33,7 @@
     .university {
       width: 50%;
       color: @third-font-color;
-      padding-top: 50px;
+      padding-top: 66px;
       margin-right: 30px;
 
       @media @tablet-l,
@@ -46,10 +46,11 @@
   
       &__name {
         color: @sixth-color;
+        font-family: @main-font;
         font-size: 18px;
         font-weight: 600;
         line-height: 36px;
-        margin-bottom: 50px;
+        margin-bottom: 34px;
 
         @media @tablet-s,
         @mobile {
@@ -63,6 +64,7 @@
         font-size: 42px;
         line-height: 56px;
         font-weight: bold;
+        margin-bottom: 7px;
 
         @media @tablet-s,
         @mobile {
@@ -75,6 +77,7 @@
       }
       
       &__description {
+        width: 100%;
         color: @third-font-color;
         font-family: @second-font;
         font-size: 34px;
@@ -181,6 +184,24 @@
         &-goals {
   
           .goal {
+            position: relative;
+
+            &::before {
+              position: absolute;
+              content: '';
+              width: 8px;
+              height: 8px;
+              top: 8px; 
+              left: 12px;
+              border: 2px solid @goal-color;
+              border-radius: 50%;
+              box-sizing: border-box;
+              box-shadow: 
+                0 0 0 7px @second-font-color,
+                0 0 0 9px @goal-color,
+                0 0 0 13px @second-font-color,
+                0 0 0 15px rgba(75, 183, 250, 0.3);
+            }
   
             &__title {
               color: @third-font-color;
@@ -189,12 +210,14 @@
               line-height: 24px;
               letter-spacing: 2.1px;
               text-transform: uppercase;
+              margin: 24px 0 18px 68px;
             }
   
             &__description {
               color: @main-font-color;
               font-size: 15px;
               line-height: 25px;
+              margin-left: 68px;
             }
           }
         }
