partners-page done

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -38,10 +38,12 @@ body {
 @import 'header.less';
 @import 'header-about.less';
 @import 'header-headship.less';
+@import 'header-partners.less';
 @import 'department.less';
 @import 'main.less';
 @import 'main-about.less';
 @import 'main-headship.less';
+@import 'main-partners.less';
 // @import 'services.less';
 // @import 'benefits.less';
 // @import 'partners.less';
