contacts-page done

--- a/app/less/index.less
+++ b/app/less/index.less
@@ -39,11 +39,14 @@ body {
 @import 'header-about.less';
 @import 'header-headship.less';
 @import 'header-partners.less';
+@import 'header-contacts.less';
 @import 'department.less';
 @import 'main.less';
 @import 'main-about.less';
 @import 'main-headship.less';
 @import 'main-partners.less';
+@import 'main-contacts.less';
+@import 'contacts.less';
 // @import 'services.less';
 // @import 'benefits.less';
 // @import 'partners.less';
