--- a/app/less/variables.less
+++ b/app/less/variables.less
@@ -11,6 +11,10 @@
 @rights-in-footer-color: #9698AC;
 @border-color: #3D84FF;
 @image-bg-color: #E7E9EF;
+@contacts-title-color: #202740;
+@contacts-text-color: #65697A;
+@contacts-email-color: #4B6298;
+
 
 /* fonts */
 
