--- a/app/pug/layout/nav.pug
+++ b/app/pug/layout/nav.pug
@@ -5,7 +5,7 @@
     {title: 'Направления деятельности', link: '#'}, 
     {title: 'Партнеры', link: 'partners.html'}, 
     {title: 'Руководство', link: 'headship.html'}, 
-    {title: 'Контакты', link: '#'}
+    {title: 'Контакты', link: 'contacts.html'}
   ]
 
 ul.nav
